--- a/config/database.yml
+++ b/config/database.yml
@@ -49,6 +49,9 @@ test:
 #
 production:
   <<: *default
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
   database: chat-space_production
   username: chat-space
   password: <%= ENV['CHAT-SPACE_DATABASE_PASSWORD'] %>
