database.ymlの追加修正

--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,4 @@ production:
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
+  database: chat-space_production
